# gazelle

./: .gitignore  infer.py  infer.sh  mcloud.yaml  mcloud_gazelle.yaml  pyproject.toml  readme.md  requirements-infer.txt  requirements.txt  train.py
examples/: infer.ipynb  infer_quantized.ipynb
gazelle/: __init__.py  modeling_gazelle.py  train.py
